Added spring security to APIs

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.servlet.multipart.max-request-size=10MB
 
 project.image=images/
 
+logging.level.org.springframework.security=DEBUG
+spring.security.user.name=sanit
+spring.security.user.password=abcd
+spring.security.user.roles=ADMIN
